add vscode to insert final line

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -21,6 +21,7 @@
         "*.json": "jsonc",
         "vimrc": "Vimscript"
     },
+    "files.insertFinalNewline": true,
 
     // git
     "git.confirmSync": false,
