--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -35,6 +35,7 @@
         "editor.formatOnSave": true,
         "editor.formatOnType": true
     },
+    "python.venvPath": "~/.virtualenvs",
     "flake8.args": [
         "--max-line-length=88",
         "--ignore=E203,W503,W504"
