jupyter restart with no asking

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -49,6 +49,7 @@
     },
     "notebook.lineNumbers": "on",
     "notebook.formatOnSave.enabled": false,
+    "jupyter.askForKernelRestart": false,
 
     // latex
     "[tex]": {
